Better error handling and better startup script.