@@ -7,18 +7,17 @@ SET arg2=%3
 IF "%command%"=="matchday" (
     IF DEFINED arg1 (
 	IF DEFINED arg2 (
-	    java -cp 'lib/*:config' org.d11.admin.D11Admin %command% -number %arg1% -season %arg2%
+	    java -cp 'lib/*:config' --add-opens java.base/java.lang=ALL-UNNAMED  org.d11.admin.D11Admin %command% -number %arg1% -season %arg2%
 	) ELSE (
-   	    java -cp 'lib/*:config' org.d11.admin.D11Admin %command% -number %arg1%
+   	    java -cp 'lib/*:config' --add-opens java.base/java.lang=ALL-UNNAMED org.d11.admin.D11Admin %command% -number %arg1%
 	)
     ) ELSE (
-        java -cp 'lib/*:config' org.d11.admin.D11Admin %command%
+        java -cp 'lib/*:config' --add-opens java.base/java.lang=ALL-UNNAMED  org.d11.admin.D11Admin %command%
     )
 ) ELSE IF "%command%"=="match" (
-    java -cp 'lib/*:config' org.d11.admin.D11Admin -password $command -matchId %arg1%
+    java -cp 'lib/*:config' --add-opens java.base/java.lang=ALL-UNNAMED org.d11.admin.D11Admin -password $command -matchId %arg1%
 ) ELSE IF "%command%"=="datetimes" (
-    java -cp 'lib/*:config' org.d11.admin.D11Admin -password $command
+    java -cp 'lib/*:config' --add-opens java.base/java.lang=ALL-UNNAMED org.d11.admin.D11Admin -password $command
 ) ELSE (
-    java -cp 'lib/*:config' org.d11.admin.D11Admin %command%
+    java -cp 'lib/*:config' --add-opens java.base/java.lang=ALL-UNNAMED org.d11.admin.D11Admin %command%
 )
-
